// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-password-field spec: Render logic -> should render with \`label\` and \`placeholder\` values changed 1`] = `
<amplify-password-field label="New password *" placeholder="Enter new password">
  <mock:shadow-root>
    <amplify-form-field fieldid="password" label="New password *" placeholder="Enter new password" type="password"></amplify-form-field>
  </mock:shadow-root>
</amplify-password-field>
`;

exports[`amplify-password-field spec: Render logic -> should render with default values 1`] = `
<amplify-password-field>
  <mock:shadow-root>
    <amplify-form-field fieldid="password" label="Password *" placeholder="Enter your password" type="password"></amplify-form-field>
  </mock:shadow-root>
</amplify-password-field>
`;
